--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 		
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="{{'/css/style.css' | relative_path}}">
+		<link rel="stylesheet" href="{{'/css/style.css' | relative_path}}" rel="stylesheet">
   </head>
   <body>
 		
